--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@ Custom properties
   --hover-link: lightcoral;
   --hover-link-shadow: coral;
 
-  --header-height: 116px;
-  --footer-height: 80px;
+  --header-height: 130px;
+  --footer-height: 60px;
 }
 
 /* ===================================================================== 
@@ -40,33 +40,8 @@ Global
 * {
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-a {
   text-decoration: none;
   color: var(--text);
-}
-
-h1 {
-  text-align: center;
-  filter: drop-shadow(3px 1px 2px var(--shadow));
-}
-
-:where(h2, h3, h4) {
-  margin-bottom: 10px;
-}
-
-hr {
-  margin: 10px 0;
-}
-
-figcaption {
-  font-style: italic;
-}
-
-.origami-img {
-  max-width: 40%;
-  filter: drop-shadow(5px 2px 5px var(--shadow));
 }
 
 body {
@@ -74,11 +49,42 @@ body {
   color: var(--text);
 }
 
+:where(h2, h3, h4) {
+  margin-bottom: 10px;
+}
+
+.ext-link {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.clickable:hover {
+  background-color: var(--hover-link);
+  box-shadow: 0 0 10px var(--hover-link-shadow);
+  cursor: pointer;
+}
+
+.clickable {
+  transition: background-color 0.2s, box-shadow 0.2s;
+}
+
+.clickable.active {
+  background-color: var(--current-page);
+}
+
+hr {
+  margin: 40px 0;
+}
+
+figcaption {
+  font-style: italic;
+  text-align: center;
+}
+
 #root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  max-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 :where(main, .container) {
@@ -92,15 +98,33 @@ main {
   box-sizing: border-box;
   padding: 40px 0;
   min-height: 650px;
+  max-height: calc(100vh - var(--header-height) - var(--footer-height));
   flex: 1;
+  overflow-y: scroll;
+}
+
+:where(.origami, .arrow) {
+  filter: drop-shadow(5px 2px 3px var(--shadow));
 }
 
 /* ===================================================================== 
 Header
 ===================================================================== */
-header {
+
+#logo {
+  height: 40px;
+}
+
+h1 {
   padding: 20px 0 0 0;
+  text-align: center;
+  filter: drop-shadow(0px 0px 4px var(--shadow));
+}
+
+header {
+  min-height: var(--header-height);
   background-color: var(--secondary);
+  box-shadow: 0 0 3px var(--shadow);
 }
 
 nav {
@@ -112,19 +136,9 @@ nav {
   margin-top: 20px;
 }
 
-.link.active {
-  background-color: var(--current-page);
-}
-
 .link {
   padding: 5px 25px;
   border-radius: 5px;
-  transition: background-color 0.2s, box-shadow 0.2s;
-}
-
-.link:hover {
-  background-color: var(--hover-link);
-  box-shadow: 0 0 10px var(--hover-link-shadow);
 }
 
 /* ---------------------------------------------------------------------
@@ -169,7 +183,7 @@ Theme toggle switch
   transform: translateX(calc(var(--height) - var(--width)));
 }
 
-.slider svg {
+:where(.sun, .moon) {
   position: absolute;
   margin: 2px;
   height: calc(var(--height) - 4px);
@@ -189,25 +203,52 @@ Footer
 ===================================================================== */
 
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 80px;
-  text-align: center;
   background-color: var(--secondary);
+  box-shadow: 0 0 3px var(--shadow);
+  font-size: 0.8rem;
+}
+
+#credits {
+  min-height: var(--footer-height);
+  display: flex;
+  column-gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 /* =====================================================================
 Home
 ===================================================================== */
 
-.homepage {
-  display: flex;
-  justify-content: space-between;
+.welcome-msg {
+  float: left;
+  width: 60%;
 }
 
-.homepage article {
-  width: 55%;
+.welcome-img {
+  float: right;
+  min-width: 300px;
+  max-width: 30%;
+}
+
+.choice {
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 1rem;
+}
+
+.unclickable {
+  position: absolute;
+  scale: 1;
+  translate: 0;
+  transition: scale 0.3s ease, translate 0.2s;
+  z-index: 2;
+  padding: 30px 40px;
+  margin: -10px -10px;
 }
 
 /* =====================================================================
@@ -217,7 +258,7 @@ Video page
 .video-container {
   margin: auto;
   width: 60%;
-  filter: drop-shadow(0 0 10px var(--shadow));
+  filter: drop-shadow(0 0 5px var(--shadow));
 }
 
 .video-container video {
@@ -277,7 +318,7 @@ Clock page
 }
 
 #mute-btn.clicked {
-  box-shadow: 0 0;
+  box-shadow: 0 0 2px var(--shadow);
   border: 3px inset #006564;
 }
 
@@ -294,46 +335,43 @@ Coursework page
 }
 
 #coursework-container aside {
+  min-width: 230px;
   width: 25%;
   border-radius: var(--box-radius);
   padding: var(--box-padding);
   background-color: var(--ternary);
   min-height: var(--min-height);
-  box-shadow: 0 0 5px var(--shadow);
+  box-shadow: 0 0 3px var(--shadow);
 }
 
-.secondary-links {
+.coursework-links {
   padding: 5px 0;
   list-style: none;
   border-top: 1px solid var(--text);
 }
 
-.secondary-link {
+.coursework-link {
   display: block;
   padding: 5px 20px;
   margin: 5px 0;
-  cursor: pointer;
-  transition: background-color 0.2s, box-shadow 0.2s, padding 0.2s;
+  transition: padding 0.2s;
   border-radius: 5px;
 }
 
-.secondary-link::before {
+.coursework-link::before {
   content: "> ";
 }
 
-.secondary-link:hover {
+.coursework-link:hover {
   padding-left: 30px;
-  background-color: var(--hover-link);
-  box-shadow: 0 0 5px var(--hover-link-shadow);
 }
 
-.secondary-link.active {
+.coursework-link.active {
   padding-left: 30px;
-  background-color: var(--current-page);
 }
 
 .report {
-  padding: var(--box-padding);
+  padding: var(--box-padding) 20px;
   width: 65%;
   overflow-y: scroll;
 }
@@ -345,6 +383,7 @@ Coursework page
 
 .report-figure img {
   width: 100%;
+  box-shadow: 0 0 5px var(--shadow);
 }
 
 #placeholder {
@@ -357,13 +396,37 @@ Coursework page
   fill: var(--secondary);
   stroke: var(--secondary);
   height: 50px;
-  margin-right: 30px;
+  margin: 0 30px;
 }
 
 /* =====================================================================
 Hobbies page
 ===================================================================== */
 
-.hobbies .origami-img {
-  margin: auto;
+.hobbies {
+  margin: 0 30px;
+}
+
+.hobbies-section {
+  display: flex;
+  justify-content: space-between;
+}
+
+.image-1 {
+  min-width: 200px;
+  margin: 0 50px;
+  align-self: center;
+}
+
+.image-2 {
+  min-width: 150px;
+  margin: 0 70px;
+  align-self: center;
+}
+
+.image-3 {
+  min-width: 200px;
+  width: 30%;
+  margin: 20px auto 0;
+  display: block;
 }
